--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,8 @@
   "name": "testyo",
   "version": "0.0.0",
   "dependencies": {
-    "sass-bootstrap": "~3.0.0",
-    "requirejs": "~2.1.8",
-    "modernizr": "~2.6.2",
-    "jquery": "~1.10.2"
+    "modernizr": ">=2.6.2",
+    "jquery": ">2"
   },
   "devDependencies": {}
 }
