Switch back from stylus to the C compiler of sass (it is unbelievably fast)
Far quicker than stylus and sass has more community support

--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-	"name": "REDFG",
-	"version": "0.0.1",
-	"src": "app",
-	"dest_jekyll": "dist",
-	"dest_irep": "irep",
-	"assets": "assets",
-	"prefix": "DRFG_",
-	"suffix": "",
-	"separator": "",
-	"username": "rdfg",
-	"password": "ftg",
-	"_comment_product": "product ID: : one way to get this is by inspecting the HTML on the Product lookup popup within Salesforce",
-	"_comment_CLM_ID_vod__c": "presentation ID: one way to get this is by inspecting the HTML on the Presentation lookup popup within Salesforce, or by looking at the URL of the presenation's page",
-	"product": "a00e0000004xse2",
-	"CLM_ID_vod__c": "a11e0000000yTCs",
-	"dependencies": {},
-	"devDependencies": {
-		"grunt": ">=0.4.1",
-		"time-grunt": ">=0.1.1",
-		"load-grunt-tasks": ">=0.1.0",
-		"assemble": ">=0.4.7",
-		"grunt-contrib-clean": ">=0.5.0",
-		"grunt-contrib-imagemin": ">=0.2.0",
-		"grunt-contrib-watch": ">=0.5.2",
-		"grunt-autoprefixer": ">=0.2.0",
-		"grunt-usemin": ">=0.1.10",
-		"grunt-svgmin": ">=0.2.0",
-		"grunt-concurrent": ">=0.3.0",
-		"node-zip": "~1.0.1",
-		"progress": "~0.1.0",
-		"phantomjs": "~1.9.0-4",
-		"imagemagick": "~0.1.3",
-		"grunt-contrib-copy": ">=0.4.1",
-		"grunt-contrib-concat": ">=0.3.0",
-		"grunt-contrib-uglify": ">=0.2.0",
-		"grunt-contrib-jshint": ">=0.6.3",
-		"grunt-contrib-cssmin": ">=0.6.0",
-		"grunt-contrib-connect": ">=0.5.0",
-		"grunt-contrib-stylus": "~0.8.0"
-	},
-	"engines": {
-		"node": ">=0.8.0"
-	}
+  "name": "REDFG",
+  "version": "0.0.1",
+  "src": "app",
+  "dest_jekyll": "dist",
+  "dest_irep": "irep",
+  "assets": "assets",
+  "prefix": "DRFG_",
+  "suffix": "",
+  "separator": "",
+  "username": "rdfg",
+  "password": "ftg",
+  "_comment_product": "product ID: : one way to get this is by inspecting the HTML on the Product lookup popup within Salesforce",
+  "_comment_CLM_ID_vod__c": "presentation ID: one way to get this is by inspecting the HTML on the Presentation lookup popup within Salesforce, or by looking at the URL of the presenation's page",
+  "product": "a00e0000004xse2",
+  "CLM_ID_vod__c": "a11e0000000yTCs",
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": ">=0.4.1",
+    "time-grunt": ">=0.1.1",
+    "load-grunt-tasks": ">=0.1.0",
+    "assemble": ">=0.4.7",
+    "grunt-contrib-clean": ">=0.5.0",
+    "grunt-contrib-imagemin": ">=0.2.0",
+    "grunt-contrib-watch": ">=0.5.2",
+    "grunt-autoprefixer": ">=0.2.0",
+    "grunt-usemin": ">=0.1.10",
+    "grunt-svgmin": ">=0.2.0",
+    "grunt-concurrent": ">=0.3.0",
+    "node-zip": "~1.0.1",
+    "progress": "~0.1.0",
+    "phantomjs": "~1.9.0-4",
+    "imagemagick": "~0.1.3",
+    "grunt-contrib-copy": ">=0.4.1",
+    "grunt-contrib-concat": ">=0.3.0",
+    "grunt-contrib-uglify": ">=0.2.0",
+    "grunt-contrib-jshint": ">=0.6.3",
+    "grunt-contrib-cssmin": ">=0.6.0",
+    "grunt-contrib-connect": ">=0.5.0",
+    "grunt-sass": ">=0.6.1"
+  },
+  "engines": {
+    "node": ">=0.8.0"
+  }
 }
