--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "grunt-contrib-jshint": ">=0.6.3",
     "grunt-contrib-cssmin": ">=0.6.0",
     "grunt-contrib-connect": ">=0.5.0",
-    "grunt-sass": ">=0.6.1"
+    "grunt-sass": ">=0.6.1",
+    "underscore": "~1.5.2"
   },
   "engines": {
     "node": ">=0.8.0"
