--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": ">=0.4.1",
-    "time-grunt": ">=0.1.1",
-    "load-grunt-tasks": ">=0.1.0",
-    "assemble": ">=0.4.7",
-    "grunt-contrib-clean": ">=0.5.0",
-    "grunt-contrib-imagemin": ">=0.2.0",
-    "grunt-contrib-watch": ">=0.5.2",
-    "grunt-autoprefixer": ">=0.2.0",
-    "grunt-usemin": ">=0.1.10",
-    "grunt-svgmin": ">=0.2.0",
-    "grunt-concurrent": ">=0.3.0",
+    "time-grunt": "~0.1.1",
+    "load-grunt-tasks": "~0.1.3",
+    "assemble": "~0.4.13",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-imagemin": "~0.3.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-autoprefixer": "~0.3.1",
+    "grunt-usemin": "~2.0.0",
+    "grunt-svgmin": "~0.2.0",
+    "grunt-concurrent": "~0.4.1",
     "node-zip": "~1.0.1",
     "progress": "~0.1.0",
     "phantomjs": "~1.9.0-4",
     "imagemagick": "~0.1.3",
-    "grunt-contrib-copy": ">=0.4.1",
-    "grunt-contrib-concat": ">=0.3.0",
-    "grunt-contrib-uglify": ">=0.2.0",
-    "grunt-contrib-jshint": ">=0.6.3",
-    "grunt-contrib-cssmin": ">=0.6.0",
-    "grunt-contrib-connect": ">=0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-cssmin": "~0.6.2",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-sass": ">=0.6.1",
     "underscore": "~1.5.2"
   },
