--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "load-grunt-tasks": "~0.1.3",
     "assemble": "~0.4.13",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-imagemin": "~0.3.0",
+    "jpegtran-bin": "0.2.0",
+    "grunt-contrib-imagemin": "*",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-autoprefixer": "~0.3.1",
     "grunt-usemin": "~2.0.0",
